タイトル基盤を作成

--- a/ahoge-48/ahoge-48.vcxproj
+++ b/ahoge-48/ahoge-48.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="Play.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="Title.cpp" />
+    <ClCompile Include="TitleUI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DxLibForIreven.h" />
@@ -149,6 +150,7 @@
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="Singleton.h" />
     <ClInclude Include="Title.h" />
+    <ClInclude Include="TitleUI.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
