--- a/ahoge-48/ahoge-48.vcxproj.filters
+++ b/ahoge-48/ahoge-48.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="TitleUI.cpp">
       <Filter>ソース ファイル\ui</Filter>
     </ClCompile>
+    <ClCompile Include="Message.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DxLibForIreven.h">
@@ -82,6 +85,9 @@
     </ClInclude>
     <ClInclude Include="TitleUI.h">
       <Filter>ヘッダー ファイル\ui</Filter>
+    </ClInclude>
+    <ClInclude Include="Message.h">
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
