--- a/ahoge-48/ahoge-48.vcxproj.filters
+++ b/ahoge-48/ahoge-48.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="Message.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Rain.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DxLibForIreven.h">
@@ -87,6 +90,9 @@
       <Filter>ヘッダー ファイル\ui</Filter>
     </ClInclude>
     <ClInclude Include="Message.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Rain.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
