--- a/ahoge-48/ahoge-48.vcxproj.filters
+++ b/ahoge-48/ahoge-48.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClCompile Include="Boot.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="PlayUI.cpp">
+      <Filter>ソース ファイル\ui</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DxLibForIreven.h">
@@ -163,6 +166,9 @@
     </ClInclude>
     <ClInclude Include="Boot.h">
       <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayUI.h">
+      <Filter>ヘッダー ファイル\ui</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
